--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
   <groupId>si.test.backend.coding.challenge</groupId>
   <artifactId>DemoApplication</artifactId>
   <packaging>jar</packaging>
+  <version>1.0-SNAPSHOT</version>
   <name>DemoApplication</name>
   <url>http://maven.apache.org</url>
   
